--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,14 @@ chardet==3.0.4
 Click==7.0
 Flask==1.1.1
 Flask-API==1.1
+gevent==1.4.0
+greenlet==0.4.15
 gunicorn==19.9.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+pkg-resources==0.0.0
 python-decouple==3.1
 requests==2.22.0
 urllib3==1.25.3
